--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
         android:id="@+id/idCustomer"
         android:layout_width="210dp"
         android:layout_height="56dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="Duy Linh"
@@ -41,14 +41,14 @@
         android:layout_marginTop="4dp"
         android:src="@drawable/ic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toEndOf="@+id/idCustomer"
         app:layout_constraintTop_toTopOf="@+id/idCustomer" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
-        android:layout_width="412dp"
-        android:layout_height="260dp"
+        android:layout_width="match_parent"
+        android:layout_height="241dp"
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -59,8 +59,8 @@
 
     <ListView
         android:id="@+id/List"
-        android:layout_width="410dp"
-        android:layout_height="330dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
