--- a/app/src/main/res/drawable/rounded_corners_for_business.xml
+++ b/app/src/main/res/drawable/rounded_corners_for_business.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" /> <!-- Thay đổi giá trị radius tùy theo nhu cầu -->
-    <solid android:color="#D9D9D9"/> <!-- Màu nền của TextView -->
+    <solid android:color="#DB1B45B2"/> <!-- Màu nền của TextView -->
     <stroke
         android:width="2dp"
-        android:color="#D9D9D9"/> <!-- Màu viền -->
+        android:color="#DB1B45B2"/> <!-- Màu viền -->
 </shape>
-
