--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -33,6 +33,9 @@
         android:text="Vai trò của bạn là gì?"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:textAppearance="@style/Heading"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,33 +54,73 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <ImageView
+<!--    <ImageView-->
+<!--        android:id="@+id/imageCN"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:background="@drawable/rounded_corners"-->
+<!--        android:clipToOutline="true"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/individual"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/individual"-->
+<!--        app:srcCompat="@drawable/ic" />-->
+
+
+    <View
         android:id="@+id/imageCN"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/rounded_image"
-        android:clipToOutline="true"
+        android:background="@drawable/rounded_corners"
         app:layout_constraintBottom_toTopOf="@+id/individual"
         app:layout_constraintEnd_toEndOf="@+id/individual"
-        app:srcCompat="@drawable/ic" />
+        app:layout_constraintStart_toStartOf="@+id/individual"
+        app:layout_constraintBottom_toBottomOf="@id/individual" />
 
     <ImageView
+        android:id="@+id/ic_user"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/ic_user"
+        app:layout_constraintTop_toTopOf="@id/imageCN"
+        app:layout_constraintBottom_toBottomOf="@id/imageCN"
+        app:layout_constraintStart_toStartOf="@id/imageCN"
+        app:layout_constraintEnd_toEndOf="@id/imageCN"
+        />
+
+
+    <View
         android:id="@+id/imageDN"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/rounded_image"
-        android:clipToOutline="true"
+        android:background="@drawable/rounded_corners_for_business"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="@+id/button4"
-        app:srcCompat="@drawable/ic_dn" />
+        app:layout_constraintStart_toStartOf="@+id/button4"
+        app:layout_constraintBottom_toBottomOf="@id/button4"/>
+
+    <ImageView
+        android:id="@+id/ic_business"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/ic_business"
+        app:layout_constraintTop_toTopOf="@id/imageDN"
+        app:layout_constraintBottom_toBottomOf="@id/imageDN"
+        app:layout_constraintStart_toStartOf="@id/imageDN"
+        app:layout_constraintEnd_toEndOf="@id/imageDN"
+        />
+
+
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="279dp"
+        android:layout_width="0dp"
         android:layout_height="202dp"
         android:layout_marginTop="24dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel bibendum ex, quis mollis arcu. Maeceis odio. Etiam commodo congue augue a eleifend. Donec turpis lacus, iaculis sed sagittis vitae, gravida ac ex."
-        android:textSize="20dp"
+        android:text="@string/sub_heading_page_choose"
+        android:textAppearance="@style/lorem_ipsum"
+        android:textSize="16dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
