--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -4,4 +4,8 @@
         <item name="android:textSize">13.5sp</item>
         <item name="android:textColor">#9747FF</item>
     </style>
+
+    <style name="button">
+
+    </style>
 </resources>
