--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -20,10 +20,10 @@
         android:layout_marginEnd="68dp"
         android:text="Cá nhân"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button4" />
+        app:layout_constraintTop_toTopOf="@+id/btn_dn" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_dn"
         android:layout_width="100dp"
         android:layout_height="70dp"
         android:layout_marginStart="68dp"
@@ -98,10 +98,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/rounded_corners_for_business"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
-        app:layout_constraintEnd_toEndOf="@+id/button4"
-        app:layout_constraintStart_toStartOf="@+id/button4"
-        app:layout_constraintBottom_toBottomOf="@id/button4"/>
+        app:layout_constraintBottom_toTopOf="@+id/btn_dn"
+        app:layout_constraintEnd_toEndOf="@+id/btn_dn"
+        app:layout_constraintStart_toStartOf="@+id/btn_dn"
+        app:layout_constraintBottom_toBottomOf="@id/btn_dn"/>
 
     <ImageView
         android:id="@+id/ic_business"
