Bổ sung activity cho giao diện

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,14 +67,15 @@
 
 
     <!-- Exit -->
-    <TextView
+    <ImageView
+        android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/ic_exit"
+        android:src="@drawable/ic_exit"
         app:layout_constraintTop_toTopOf="@id/logan"
         app:layout_constraintBottom_toBottomOf="@id/logan"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <!-- Heading -->
     <TextView
