--- a/app/src/main/res/layout/activity_main_dn.xml
+++ b/app/src/main/res/layout/activity_main_dn.xml
@@ -4,8 +4,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <!--//android:paddingTop="?attr/actionBarSize"-->
-
+    <!--android:paddingTop="?attr/actionBarSize">-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view2"
@@ -24,6 +23,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view2"
         app:layout_constraintLeft_toLeftOf="parent"
