--- a/app/src/main/res/layout/dn_sanphambtn.xml
+++ b/app/src/main/res/layout/dn_sanphambtn.xml
@@ -8,59 +8,6 @@
 
 
 
-    <LinearLayout
-        android:id="@+id/tab_container"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/white"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tab_all"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="16dp"
-            android:text="   Tất cả"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/tab_paid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="16dp"
-            android:text="Đã thanh toán"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/tab_unpaid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="16dp"
-            android:text="Chưa thanh toán"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/tab_other"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="16dp"
-            android:text="Khác"
-            android:textColor="@android:color/black" />
-    </LinearLayout>
-
     <HorizontalScrollView
         android:id="@+id/combined_scroll"
         android:layout_width="match_parent"
@@ -76,7 +23,7 @@
                 android:id="@+id/header_order_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mã đơn hàng"
+                android:text="Mã nhà cc"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
 
@@ -84,7 +31,7 @@
                 android:id="@+id/header_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ngày"
+                android:text="Tên nhà cc"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
 
@@ -92,7 +39,7 @@
                 android:id="@+id/header_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tổng cộng"
+                android:text="Số sp cc"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
 
@@ -100,7 +47,7 @@
                 android:id="@+id/header_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Thanh toán"
+                android:text="Số điện thoại"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
 
@@ -108,7 +55,15 @@
                 android:id="@+id/header_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tình trạng"
+                android:text="Đại diện"
+                android:padding="16dp"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/header_statu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
 
@@ -116,18 +71,27 @@
                 android:id="@+id/header_stat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Ngày hợp tác"
+                android:padding="16dp"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/header_sta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tình trạng"
+                android:padding="16dp"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/header_st"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Ghi chú"
                 android:padding="16dp"
                 android:textColor="@android:color/black" />
         </LinearLayout>
     </HorizontalScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
