--- a/app/src/main/res/layout/fragment_home_dn.xml
+++ b/app/src/main/res/layout/fragment_home_dn.xml
@@ -366,7 +366,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Nhân viên"
+                    android:text="Don hang"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.511"
