--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#8FC2F8</color>
+    <color name="light_green">#8FF891</color>
+    <color name="light_red">#F8988F</color>
+    <color name="light_yellow">#F8EA8F</color>
     <color name="colorEven">#F0F0F0</color> <!-- Màu cho item chẵn -->
     <color name="colorOdd">#FFFFFF</color>  <!-- Màu cho item lẻ -->
 </resources>
