--- a/app/src/main/res/drawable/business_shape_blue.xml
+++ b/app/src/main/res/drawable/business_shape_blue.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="15dp" /> <!-- Bo góc -->
-    <gradient
-        android:startColor="#9F80FFFF"
-        android:endColor="#FFFFFF80"
-        android:angle="270"/>
+    <corners android:radius="5dp" /> <!-- Bo góc -->
+    <solid
+        android:color="@color/light_blue"
+        android:alpha="0.5"/>
 
     <stroke
         android:width="1dp"
