--- a/app/src/main/res/navigation/dn_mobile_navigation.xml
+++ b/app/src/main/res/navigation/dn_mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeDnFragment"
         android:name="com.example.piechart.uidn.home.HomeDnFragment"
         android:label="fragment_home_dn"
-        tools:layout="@layout/fragment_home_dn" >
+        tools:layout="@layout/business_fragment_home" >
 
         <action
             android:id="@+id/action_homeDnFragment_to_donHangFragment"
@@ -40,12 +40,12 @@
         android:id="@+id/moreFragment"
         android:name="com.example.piechart.uidn.more.MoreFragment"
         android:label="fragment_more"
-        tools:layout="@layout/fragment_more" />
+        tools:layout="@layout/business_fragment_more" />
     <fragment
         android:id="@+id/quanLyFragment"
         android:name="com.example.piechart.uidn.QuanLy.QuanLyFragment"
         android:label="fragment_quan_ly"
-        tools:layout="@layout/fragment_quan_ly" />
+        tools:layout="@layout/business_fragment_quanly" />
     <fragment
         android:id="@+id/donHangFragment"
         android:name="com.example.piechart.uidn.FragmentButton.DonHangFragment"
